source/projects/chuck/core/chuck.output
Terminals which are not used

   POUND
   THEN
   NULL_TOK
   SIMULT
   PATTERN
   CODE
   TRANSPORT
   HOST
   TIME
   WHENEVER
   NEXT
   EVERY
   BEFORE
   AFTER
   AT
   S_CHUCK
   LEFT_S_CHUCK
   CONST


State 56 conflicts: 42 shift/reduce
State 124 conflicts: 1 shift/reduce
State 207 conflicts: 1 shift/reduce
State 282 conflicts: 1 shift/reduce
State 331 conflicts: 1 shift/reduce
State 354 conflicts: 42 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_section
    2        | program program_section

    3 program_section: statement_list
    4                | function_definition
    5                | class_definition

    6 class_definition: class_decl CLASS id_list LBRACE class_body RBRACE
    7                 | class_decl CLASS id_list class_ext LBRACE class_body RBRACE
    8                 | class_decl INTERFACE id_list LBRACE class_body RBRACE
    9                 | class_decl INTERFACE id_list iface_ext LBRACE class_body RBRACE

   10 class_ext: IMPLEMENTS id_list
   11          | IMPLEMENTS id_list EXTENDS id_dot
   12          | EXTENDS id_dot
   13          | EXTENDS id_dot IMPLEMENTS id_list

   14 class_body: class_body2
   15           | /* empty */

   16 class_body2: class_section
   17            | class_section class_body2

   18 class_section: statement_list
   19              | function_definition
   20              | class_definition

   21 iface_ext: EXTENDS id_list

   22 id_list: ID
   23        | ID COMMA id_list

   24 id_dot: ID
   25       | ID DOT id_dot

   26 function_definition: function_decl static_decl type_decl2 ID LPAREN arg_list RPAREN code_segment
   27                    | function_decl static_decl type_decl2 ID LPAREN RPAREN code_segment
   28                    | function_decl static_decl ID LPAREN arg_list RPAREN code_segment
   29                    | function_decl static_decl ID LPAREN RPAREN code_segment
   30                    | function_decl AT_CTOR LPAREN arg_list RPAREN code_segment
   31                    | function_decl AT_CTOR LPAREN RPAREN code_segment
   32                    | function_decl AT_DTOR LPAREN RPAREN code_segment
   33                    | function_decl AT_DTOR LPAREN arg_list RPAREN code_segment
   34                    | function_decl static_decl type_decl2 ID LPAREN arg_list RPAREN SEMICOLON
   35                    | function_decl static_decl type_decl2 ID LPAREN RPAREN SEMICOLON
   36                    | function_decl static_decl type_decl2 AT_OP overloadable_operator LPAREN arg_list RPAREN code_segment
   37                    | function_decl static_decl type_decl2 AT_OP LPAREN arg_list RPAREN overloadable_operator code_segment
   38                    | function_decl static_decl type_decl2 AT_OP LPAREN overloadable_operator RPAREN LPAREN arg_list RPAREN code_segment
   39                    | function_decl static_decl type_decl2 AT_OP LPAREN arg_list RPAREN LPAREN overloadable_operator RPAREN code_segment

   40 class_decl: PUBLIC
   41           | PRIVATE
   42           | /* empty */

   43 function_decl: FUNCTION
   44              | PUBLIC
   45              | PROTECTED
   46              | PRIVATE

   47 static_decl: STATIC
   48            | ABSTRACT
   49            | /* empty */

   50 type_decl_a: ID
   51            | ID AT_SYM

   52 type_decl_b: LT id_dot GT
   53            | LT id_dot GT AT_SYM

   54 type_decl: type_decl_a
   55          | type_decl_b

   56 type_decl2: type_decl
   57           | type_decl array_empty

   58 arg_list: type_decl var_decl
   59         | type_decl var_decl COMMA arg_list

   60 statement_list: statement
   61               | statement_list statement

   62 statement: expression_statement
   63          | loop_statement
   64          | selection_statement
   65          | jump_statement
   66          | code_segment
   67          | import_statement
   68          | doc_statement
   69          | example_statement

   70 jump_statement: RETURN SEMICOLON
   71               | RETURN expression SEMICOLON
   72               | BREAK SEMICOLON
   73               | CONTINUE SEMICOLON

   74 selection_statement: IF LPAREN expression RPAREN statement
   75                    | IF LPAREN expression RPAREN statement ELSE statement

   76 loop_statement: WHILE LPAREN expression RPAREN statement
   77               | DO statement WHILE LPAREN expression RPAREN SEMICOLON
   78               | FOR LPAREN expression_statement expression_statement RPAREN statement
   79               | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   80               | FOR LPAREN expression COLON expression RPAREN statement
   81               | UNTIL LPAREN expression RPAREN statement
   82               | DO statement UNTIL LPAREN expression RPAREN SEMICOLON
   83               | LOOP LPAREN expression RPAREN statement

   84 code_segment: LBRACE RBRACE
   85             | LBRACE statement_list RBRACE

   86 import_statement: AT_IMPORT import_target
   87                 | AT_IMPORT LBRACK RBRACK
   88                 | AT_IMPORT LBRACE RBRACE
   89                 | AT_IMPORT LBRACK import_list LBRACK
   90                 | AT_IMPORT LBRACE import_list RBRACE

   91 import_list: import_target
   92            | import_target COMMA import_list

   93 import_target: STRING_LIT

   94 doc_statement: AT_DOC doc_target
   95              | AT_DOC LBRACK doc_list RBRACK
   96              | AT_DOC LBRACE doc_list RBRACE

   97 doc_list: doc_target
   98         | doc_target COMMA doc_list

   99 doc_target: STRING_LIT

  100 example_statement: AT_EXAMPLE example_target
  101                  | AT_EXAMPLE LBRACK example_list RBRACK
  102                  | AT_EXAMPLE LBRACE example_list RBRACE

  103 example_list: example_target
  104             | example_target COMMA example_list

  105 example_target: STRING_LIT

  106 expression_statement: SEMICOLON
  107                     | expression SEMICOLON

  108 expression: chuck_expression
  109           | expression COMMA chuck_expression

  110 chuck_expression: arrow_expression
  111                 | chuck_expression chuck_operator arrow_expression

  112 arrow_expression: decl_expression
  113                 | arrow_expression arrow_operator decl_expression

  114 array_exp: LBRACK expression RBRACK
  115          | LBRACK expression COMMA RBRACK
  116          | LBRACK expression RBRACK array_exp
  117          | LBRACK expression COMMA RBRACK array_exp

  118 array_empty: LBRACK RBRACK
  119            | array_empty LBRACK RBRACK

  120 decl_expression: conditional_expression
  121                | type_decl var_decl_list
  122                | EXTERNAL type_decl var_decl_list
  123                | GLOBAL type_decl var_decl_list
  124                | STATIC type_decl var_decl_list
  125                | SAME var_decl_list
  126                | STATIC SAME var_decl_list

  127 var_decl_list: var_decl
  128              | var_decl COMMA var_decl_list

  129 var_decl: ID
  130         | ID array_exp
  131         | ID array_empty
  132         | ID LPAREN RPAREN
  133         | ID LPAREN expression RPAREN
  134         | ID LPAREN RPAREN array_exp
  135         | ID LPAREN expression RPAREN array_exp

  136 complex_exp: POUNDPAREN expression RPAREN

  137 polar_exp: PERCENTPAREN expression RPAREN

  138 vec_exp: ATPAREN expression RPAREN

  139 chuck_operator: CHUCK
  140               | AT_CHUCK
  141               | PLUS_CHUCK
  142               | MINUS_CHUCK
  143               | TIMES_CHUCK
  144               | DIVIDE_CHUCK
  145               | SHIFT_RIGHT_CHUCK
  146               | SHIFT_LEFT_CHUCK
  147               | PERCENT_CHUCK
  148               | UNCHUCK
  149               | UPCHUCK
  150               | DOWNCHUCK
  151               | S_AND_CHUCK
  152               | S_OR_CHUCK
  153               | S_XOR_CHUCK

  154 arrow_operator: ARROW_LEFT
  155               | ARROW_RIGHT
  156               | GRUCK_LEFT
  157               | GRUCK_RIGHT
  158               | UNGRUCK_LEFT
  159               | UNGRUCK_RIGHT

  160 conditional_expression: logical_or_expression
  161                       | logical_or_expression QUESTION expression COLON conditional_expression

  162 logical_or_expression: logical_and_expression
  163                      | logical_or_expression OR logical_and_expression

  164 logical_and_expression: inclusive_or_expression
  165                       | logical_and_expression AND inclusive_or_expression

  166 inclusive_or_expression: exclusive_or_expression
  167                        | inclusive_or_expression S_OR exclusive_or_expression

  168 exclusive_or_expression: and_expression
  169                        | exclusive_or_expression S_XOR and_expression

  170 and_expression: equality_expression
  171               | and_expression S_AND equality_expression

  172 equality_expression: relational_expression
  173                    | equality_expression EQ relational_expression
  174                    | equality_expression NEQ relational_expression

  175 relational_expression: shift_expression
  176                      | relational_expression LT shift_expression
  177                      | relational_expression GT shift_expression
  178                      | relational_expression LE shift_expression
  179                      | relational_expression GE shift_expression

  180 shift_expression: additive_expression
  181                 | shift_expression SHIFT_LEFT additive_expression
  182                 | shift_expression SHIFT_RIGHT additive_expression

  183 additive_expression: multiplicative_expression
  184                    | additive_expression PLUS multiplicative_expression
  185                    | additive_expression MINUS multiplicative_expression

  186 multiplicative_expression: tilda_expression
  187                          | multiplicative_expression TIMES tilda_expression
  188                          | multiplicative_expression DIVIDE tilda_expression
  189                          | multiplicative_expression PERCENT tilda_expression

  190 tilda_expression: cast_expression
  191                 | tilda_expression TILDA cast_expression

  192 cast_expression: unary_expression
  193                | cast_expression DOLLAR type_decl

  194 unary_expression: dur_expression
  195                 | PLUSPLUS unary_expression
  196                 | MINUSMINUS unary_expression
  197                 | unary_operator unary_expression
  198                 | TYPEOF unary_expression
  199                 | SIZEOF unary_expression
  200                 | NEW type_decl
  201                 | NEW type_decl array_exp
  202                 | NEW type_decl LPAREN RPAREN
  203                 | NEW type_decl LPAREN expression RPAREN
  204                 | NEW type_decl LPAREN RPAREN array_exp
  205                 | NEW type_decl LPAREN expression RPAREN array_exp

  206 unary_operator: PLUS
  207               | MINUS
  208               | TILDA
  209               | EXCLAMATION
  210               | TIMES
  211               | SPORK TILDA
  212               | DOWNCHUCK

  213 overloadable_operator: CHUCK
  214                      | PLUS
  215                      | MINUS
  216                      | TIMES
  217                      | DIVIDE
  218                      | PERCENT
  219                      | EQ
  220                      | NEQ
  221                      | LT
  222                      | LE
  223                      | GT
  224                      | GE
  225                      | AND
  226                      | OR
  227                      | ASSIGN
  228                      | EXCLAMATION
  229                      | S_OR
  230                      | S_AND
  231                      | S_XOR
  232                      | PLUSPLUS
  233                      | MINUSMINUS
  234                      | DOLLAR
  235                      | ATAT_SYM
  236                      | PLUS_CHUCK
  237                      | MINUS_CHUCK
  238                      | TIMES_CHUCK
  239                      | DIVIDE_CHUCK
  240                      | S_AND_CHUCK
  241                      | S_OR_CHUCK
  242                      | S_XOR_CHUCK
  243                      | SHIFT_RIGHT_CHUCK
  244                      | SHIFT_LEFT_CHUCK
  245                      | PERCENT_CHUCK
  246                      | SHIFT_RIGHT
  247                      | SHIFT_LEFT
  248                      | TILDA
  249                      | COLONCOLON
  250                      | AT_CHUCK
  251                      | UNCHUCK
  252                      | UPCHUCK
  253                      | DOWNCHUCK
  254                      | ARROW_RIGHT
  255                      | ARROW_LEFT
  256                      | GRUCK_RIGHT
  257                      | GRUCK_LEFT
  258                      | UNGRUCK_RIGHT
  259                      | UNGRUCK_LEFT

  260 dur_expression: postfix_expression
  261               | dur_expression COLONCOLON postfix_expression

  262 postfix_expression: primary_expression
  263                   | postfix_expression array_exp
  264                   | postfix_expression LPAREN RPAREN
  265                   | postfix_expression LPAREN expression RPAREN
  266                   | postfix_expression DOT ID
  267                   | postfix_expression PLUSPLUS
  268                   | postfix_expression MINUSMINUS

  269 primary_expression: ID
  270                   | INT_VAL
  271                   | FLOAT_VAL
  272                   | STRING_LIT
  273                   | CHAR_LIT
  274                   | array_exp
  275                   | complex_exp
  276                   | polar_exp
  277                   | vec_exp
  278                   | L_HACK expression R_HACK
  279                   | LPAREN expression RPAREN
  280                   | LPAREN RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 22 23 24 25 26 27 28 29 34 35 50 51 129 130 131 132 133 134
    135 266 269
STRING_LIT (259) 93 99 105 272
CHAR_LIT (260) 273
INT_VAL (261) 270
FLOAT_VAL (262) 271
POUND (263)
COMMA (264) 23 59 92 98 104 109 115 117 128
COLON (265) 80 161
SEMICOLON (266) 34 35 70 71 72 73 77 82 106 107
LPAREN (267) 26 27 28 29 30 31 32 33 34 35 36 37 38 39 74 75 76 77
    78 79 80 81 82 83 132 133 134 135 202 203 204 205 264 265 279 280
RPAREN (268) 26 27 28 29 30 31 32 33 34 35 36 37 38 39 74 75 76 77
    78 79 80 81 82 83 132 133 134 135 136 137 138 202 203 204 205 264
    265 279 280
LBRACK (269) 87 89 95 101 114 115 116 117 118 119
RBRACK (270) 87 95 101 114 115 116 117 118 119
LBRACE (271) 6 7 8 9 84 85 88 90 96 102
RBRACE (272) 6 7 8 9 84 85 88 90 96 102
DOT (273) 25 266
PLUS (274) 184 206 214
MINUS (275) 185 207 215
TIMES (276) 187 210 216
DIVIDE (277) 188 217
PERCENT (278) 189 218
EQ (279) 173 219
NEQ (280) 174 220
LT (281) 52 53 176 221
LE (282) 178 222
GT (283) 52 53 177 223
GE (284) 179 224
AND (285) 165 225
OR (286) 163 226
ASSIGN (287) 227
IF (288) 74 75
THEN (289)
ELSE (290) 75
WHILE (291) 76 77
FOR (292) 78 79 80
DO (293) 77 82
LOOP (294) 83
BREAK (295) 72
CONTINUE (296) 73
NULL_TOK (297)
FUNCTION (298) 43
RETURN (299) 70 71
QUESTION (300) 161
EXCLAMATION (301) 209 228
S_OR (302) 167 229
S_AND (303) 171 230
S_XOR (304) 169 231
PLUSPLUS (305) 195 232 267
MINUSMINUS (306) 196 233 268
DOLLAR (307) 193 234
POUNDPAREN (308) 136
PERCENTPAREN (309) 137
ATPAREN (310) 138
SIMULT (311)
PATTERN (312)
CODE (313)
TRANSPORT (314)
HOST (315)
TIME (316)
WHENEVER (317)
NEXT (318)
UNTIL (319) 81 82
EXTERNAL (320) 122
GLOBAL (321) 123
EVERY (322)
BEFORE (323)
AFTER (324)
AT (325)
AT_SYM (326) 51 53
ATAT_SYM (327) 235
NEW (328) 200 201 202 203 204 205
SIZEOF (329) 199
TYPEOF (330) 198
SAME (331) 125 126
PLUS_CHUCK (332) 141 236
MINUS_CHUCK (333) 142 237
TIMES_CHUCK (334) 143 238
DIVIDE_CHUCK (335) 144 239
S_AND_CHUCK (336) 151 240
S_OR_CHUCK (337) 152 241
S_XOR_CHUCK (338) 153 242
SHIFT_RIGHT_CHUCK (339) 145 243
SHIFT_LEFT_CHUCK (340) 146 244
PERCENT_CHUCK (341) 147 245
SHIFT_RIGHT (342) 182 246
SHIFT_LEFT (343) 181 247
TILDA (344) 191 208 211 248
CHUCK (345) 139 213
COLONCOLON (346) 249 261
S_CHUCK (347)
AT_CHUCK (348) 140 250
LEFT_S_CHUCK (349)
UNCHUCK (350) 148 251
UPCHUCK (351) 149 252
DOWNCHUCK (352) 150 212 253
CLASS (353) 6 7
INTERFACE (354) 8 9
EXTENDS (355) 11 12 13 21
IMPLEMENTS (356) 10 11 13
PUBLIC (357) 40 44
PROTECTED (358) 45
PRIVATE (359) 41 46
STATIC (360) 47 124 126
ABSTRACT (361) 48
CONST (362)
SPORK (363) 211
ARROW_RIGHT (364) 155 254
ARROW_LEFT (365) 154 255
L_HACK (366) 278
R_HACK (367) 278
GRUCK_RIGHT (368) 157 256
GRUCK_LEFT (369) 156 257
UNGRUCK_RIGHT (370) 159 258
UNGRUCK_LEFT (371) 158 259
AT_OP (372) 36 37 38 39
AT_CTOR (373) 30 31
AT_DTOR (374) 32 33
AT_IMPORT (375) 86 87 88 89 90
AT_DOC (376) 94 95 96
AT_EXAMPLE (377) 100 101 102


Nonterminals, with rules where they appear

$accept (123)
    on left: 0
program (124)
    on left: 1 2, on right: 0 2
program_section (125)
    on left: 3 4 5, on right: 1 2
class_definition (126)
    on left: 6 7 8 9, on right: 5 20
class_ext (127)
    on left: 10 11 12 13, on right: 7
class_body (128)
    on left: 14 15, on right: 6 7 8 9
class_body2 (129)
    on left: 16 17, on right: 14 17
class_section (130)
    on left: 18 19 20, on right: 16 17
iface_ext (131)
    on left: 21, on right: 9
id_list (132)
    on left: 22 23, on right: 6 7 8 9 10 11 13 21 23
id_dot (133)
    on left: 24 25, on right: 11 12 13 25 52 53
function_definition (134)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39,
    on right: 4 19
class_decl (135)
    on left: 40 41 42, on right: 6 7 8 9
function_decl (136)
    on left: 43 44 45 46, on right: 26 27 28 29 30 31 32 33 34 35 36
    37 38 39
static_decl (137)
    on left: 47 48 49, on right: 26 27 28 29 34 35 36 37 38 39
type_decl_a (138)
    on left: 50 51, on right: 54
type_decl_b (139)
    on left: 52 53, on right: 55
type_decl (140)
    on left: 54 55, on right: 56 57 58 59 121 122 123 124 193 200 201
    202 203 204 205
type_decl2 (141)
    on left: 56 57, on right: 26 27 34 35 36 37 38 39
arg_list (142)
    on left: 58 59, on right: 26 28 30 33 34 36 37 38 39 59
statement_list (143)
    on left: 60 61, on right: 3 18 61 85
statement (144)
    on left: 62 63 64 65 66 67 68 69, on right: 60 61 74 75 76 77 78
    79 80 81 82 83
jump_statement (145)
    on left: 70 71 72 73, on right: 65
selection_statement (146)
    on left: 74 75, on right: 64
loop_statement (147)
    on left: 76 77 78 79 80 81 82 83, on right: 63
code_segment (148)
    on left: 84 85, on right: 26 27 28 29 30 31 32 33 36 37 38 39 66
import_statement (149)
    on left: 86 87 88 89 90, on right: 67
import_list (150)
    on left: 91 92, on right: 89 90 92
import_target (151)
    on left: 93, on right: 86 91 92
doc_statement (152)
    on left: 94 95 96, on right: 68
doc_list (153)
    on left: 97 98, on right: 95 96 98
doc_target (154)
    on left: 99, on right: 94 97 98
example_statement (155)
    on left: 100 101 102, on right: 69
example_list (156)
    on left: 103 104, on right: 101 102 104
example_target (157)
    on left: 105, on right: 100 103 104
expression_statement (158)
    on left: 106 107, on right: 62 78 79
expression (159)
    on left: 108 109, on right: 71 74 75 76 77 79 80 81 82 83 107 109
    114 115 116 117 133 135 136 137 138 161 203 205 265 278 279
chuck_expression (160)
    on left: 110 111, on right: 108 109 111
arrow_expression (161)
    on left: 112 113, on right: 110 111 113
array_exp (162)
    on left: 114 115 116 117, on right: 116 117 130 134 135 201 204
    205 263 274
array_empty (163)
    on left: 118 119, on right: 57 119 131
decl_expression (164)
    on left: 120 121 122 123 124 125 126, on right: 112 113
var_decl_list (165)
    on left: 127 128, on right: 121 122 123 124 125 126 128
var_decl (166)
    on left: 129 130 131 132 133 134 135, on right: 58 59 127 128
complex_exp (167)
    on left: 136, on right: 275
polar_exp (168)
    on left: 137, on right: 276
vec_exp (169)
    on left: 138, on right: 277
chuck_operator (170)
    on left: 139 140 141 142 143 144 145 146 147 148 149 150 151 152
    153, on right: 111
arrow_operator (171)
    on left: 154 155 156 157 158 159, on right: 113
conditional_expression (172)
    on left: 160 161, on right: 120 161
logical_or_expression (173)
    on left: 162 163, on right: 160 161 163
logical_and_expression (174)
    on left: 164 165, on right: 162 163 165
inclusive_or_expression (175)
    on left: 166 167, on right: 164 165 167
exclusive_or_expression (176)
    on left: 168 169, on right: 166 167 169
and_expression (177)
    on left: 170 171, on right: 168 169 171
equality_expression (178)
    on left: 172 173 174, on right: 170 171 173 174
relational_expression (179)
    on left: 175 176 177 178 179, on right: 172 173 174 176 177 178
    179
shift_expression (180)
    on left: 180 181 182, on right: 175 176 177 178 179 181 182
additive_expression (181)
    on left: 183 184 185, on right: 180 181 182 184 185
multiplicative_expression (182)
    on left: 186 187 188 189, on right: 183 184 185 187 188 189
tilda_expression (183)
    on left: 190 191, on right: 186 187 188 189 191
cast_expression (184)
    on left: 192 193, on right: 190 191 193
unary_expression (185)
    on left: 194 195 196 197 198 199 200 201 202 203 204 205,
    on right: 192 195 196 197 198 199
unary_operator (186)
    on left: 206 207 208 209 210 211 212, on right: 197
overloadable_operator (187)
    on left: 213 214 215 216 217 218 219 220 221 222 223 224 225 226
    227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242
    243 244 245 246 247 248 249 250 251 252 253 254 255 256 257 258
    259, on right: 36 37 38 39
dur_expression (188)
    on left: 260 261, on right: 194 261
postfix_expression (189)
    on left: 262 263 264 265 266 267 268, on right: 260 261 263 264
    265 266 267 268
primary_expression (190)
    on left: 269 270 271 272 273 274 275 276 277 278 279 280,
    on right: 262


state 0

    0 $accept: . program $end

    ID            shift, and go to state 1
    STRING_LIT    shift, and go to state 2
    CHAR_LIT      shift, and go to state 3
    INT_VAL       shift, and go to state 4
    FLOAT_VAL     shift, and go to state 5
    SEMICOLON     shift, and go to state 6
    LPAREN        shift, and go to state 7
    LBRACK        shift, and go to state 8
    LBRACE        shift, and go to state 9
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    TIMES         shift, and go to state 12
    LT            shift, and go to state 13
    IF            shift, and go to state 14
    WHILE         shift, and go to state 15
    FOR           shift, and go to state 16
    DO            shift, and go to state 17
    LOOP          shift, and go to state 18
    BREAK         shift, and go to state 19
    CONTINUE      shift, and go to state 20
    FUNCTION      shift, and go to state 21
    RETURN        shift, and go to state 22
    EXCLAMATION   shift, and go to state 23
    PLUSPLUS      shift, and go to state 24
    MINUSMINUS    shift, and go to state 25
    POUNDPAREN    shift, and go to state 26
    PERCENTPAREN  shift, and go to state 27
    ATPAREN       shift, and go to state 28
    UNTIL         shift, and go to state 29
    EXTERNAL      shift, and go to state 30
    GLOBAL        shift, and go to state 31
    NEW           shift, and go to state 32
    SIZEOF        shift, and go to state 33
    TYPEOF        shift, and go to state 34
    SAME          shift, and go to state 35
    TILDA         shift, and go to state 36
    DOWNCHUCK     shift, and go to state 37
    PUBLIC        shift, and go to state 38
    PROTECTED     shift, and go to state 39
    PRIVATE       shift, and go to state 40
    STATIC        shift, and go to state 41
    SPORK         shift, and go to state 42
    L_HACK        shift, and go to state 43
    AT_IMPORT     shift, and go to state 44
    AT_DOC        shift, and go to state 45
    AT_EXAMPLE    shift, and go to state 46

    $default  reduce using rule 42 (class_decl)

    program                    go to state 47
    program_section            go to state 48
    class_definition           go to state 49
    function_definition        go to state 50
    class_decl                 go to state 51
    function_decl              go to state 52
    type_decl_a                go to state 53
    type_decl_b                go to state 54
    type_decl                  go to state 55
    statement_list             go to state 56
    statement                  go to state 57
    jump_statement             go to state 58
    selection_statement        go to state 59
    loop_statement             go to state 60
    code_segment               go to state 61
    import_statement           go to state 62
    doc_statement              go to state 63
    example_statement          go to state 64
    expression_statement       go to state 65
    expression                 go to state 66
    chuck_expression           go to state 67
    arrow_expression           go to state 68
    array_exp                  go to state 69
    decl_expression            go to state 70
    complex_exp                go to state 71
    polar_exp                  go to state 72
    vec_exp                    go to state 73
    conditional_expression     go to state 74
    logical_or_expression      go to state 75
    logical_and_expression     go to state 76
    inclusive_or_expression    go to state 77
    exclusive_or_expression    go to state 78
    and_expression             go to state 79
    equality_expression        go to state 80
    relational_expression      go to state 81
    shift_expression           go to state 82
    additive_expression        go to state 83
    multiplicative_expression  go to state 84
    tilda_expression           go to state 85
    cast_expression            go to state 86
    unary_expression           go to state 87
    unary_operator             go to state 88
    dur_expression             go to state 89
    postfix_expression         go to state 90
    primary_expression         go to state 91


state 1

   50 type_decl_a: ID .
   51            | ID . AT_SYM
  269 primary_expression: ID .

    AT_SYM  shift, and go to state 92

    ID        reduce using rule 50 (type_decl_a)
    $default  reduce using rule 269 (primary_expression)


state 2

  272 primary_expression: STRING_LIT .

    $default  reduce using rule 272 (primary_expression)


state 3

  273 primary_expression: CHAR_LIT .

    $default  reduce using rule 273 (primary_expression)


state 4

  270 primary_expression: INT_VAL .

    $default  reduce using rule 270 (primary_expression)


state 5

  271 primary_expression: FLOAT_VAL .

    $default  reduce using rule 271 (primary_expression)


state 6

  106 expression_statement: SEMICOLON .

    $default  reduce using rule 106 (expression_statement)


state 7

  279 primary_expression: LPAREN . expression RPAREN
  280                   | LPAREN . RPAREN

    ID            shift, and go to state 1
    STRING_LIT    shift, and go to state 2
    CHAR_LIT      shift, and go to state 3
    INT_VAL       shift, and go to state 4
    FLOAT_VAL     shift, and go to state 5
    LPAREN        shift, and go to state 7
    RPAREN        shift, and go to state 93
    LBRACK        shift, and go to state 8
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    TIMES         shift, and go to state 12
    LT            shift, and go to state 13
    EXCLAMATION   shift, and go to state 23
    PLUSPLUS      shift, and go to state 24
    MINUSMINUS    shift, and go to state 25
    POUNDPAREN    shift, and go to state 26
    PERCENTPAREN  shift, and go to state 27
    ATPAREN       shift, and go to state 28
    EXTERNAL      shift, and go to state 30
    GLOBAL        shift, and go to state 31
    NEW           shift, and go to state 32
    SIZEOF        shift, and go to state 33
    TYPEOF        shift, and go to state 34
    SAME          shift, and go to state 35
    TILDA         shift, and go to state 36
    DOWNCHUCK     shift, and go to state 37
    STATIC        shift, and go to state 41
    SPORK         shift, and go to state 42
    L_HACK        shift, and go to state 43

    type_decl_a                go to state 53
    type_decl_b                go to state 54
    type_decl                  go to state 55
    expression                 go to state 94
    chuck_expression           go to state 67
    arrow_expression           go to state 68
    array_exp                  go to state 69
    decl_expression            go to state 70
    complex_exp                go to state 71
    polar_exp                  go to state 72
    vec_exp                    go to state 73
    conditional_expression     go to state 74
    logical_or_expression      go to state 75
    logical_and_expression     go to state 76
    inclusive_or_expression    go to state 77
    exclusive_or_expression    go to state 78
    and_expression             go to state 79
    equality_expression        go to state 80
    relational_expression      go to state 81
    shift_expression           go to state 82
    additive_expression        go to state 83
    multiplicative_expression  go to state 84
    tilda_expression           go to state 85
    cast_expression            go to state 86
    unary_expression           go to state 87
    unary_operator             go to state 88
    dur_expression             go to state 89
    postfix_expression         go to state 90
    primary_expression         go to state 91


state 8

  114 array_exp: LBRACK . expression RBRACK
  115          | LBRACK . expression COMMA RBRACK
  116          | LBRACK . expression RBRACK array_exp
  117          | LBRACK . expression COMMA RBRACK array_exp

    ID            shift, and go to state 1
    STRING_LIT    shift, and go to state 2
    CHAR_LIT      shift, and go to state 3
    INT_VAL       shift, and go to state 4
    FLOAT_VAL     shift, and go to state 5
    LPAREN        shift, and go to state 7
    LBRACK        shift, and go to state 8
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    TIMES         shift, and go to state 12
    LT            shift, and go to state 13
    EXCLAMATION   shift, and go to state 23
    PLUSPLUS      shift, and go to state 24
    MINUSMINUS    shift, and go to state 25
    POUNDPAREN    shift, and go to state 26
    PERCENTPAREN  shift, and go to state 27
    ATPAREN       shift, and go to state 28
    EXTERNAL      shift, and go to state 30
    GLOBAL        shift, and go to state 31
    NEW           shift, and go to state 32
    SIZEOF        shift, and go to state 33
    TYPEOF        shift, and go to state 34
    SAME          shift, and go to state 35
    TILDA         shift, and go to state 36
    DOWNCHUCK     shift, and go to state 37
    STATIC        shift, and go to state 41
    SPORK         shift, and go to state 42
    L_HACK        shift, and go to state 43

    type_decl_a                go to state 53
    type_decl_b                go to state 54
    type_decl                  go to state 55
    expression                 go to state 95
    chuck_expression           go to state 67
    arrow_expression           go to state 68
    array_exp                  go to state 69
    decl_expression            go to state 70
    complex_exp                go to state 71
    polar_exp                  go to state 72
    vec_exp                    go to state 73
    conditional_expression     go to state 74
    logical_or_expression      go to state 75
    logical_and_expression     go to state 76
    inclusive_or_expression    go to state 77
    exclusive_or_expression    go to state 78
    and_expression             go to state 79
    equality_expression        go to state 80
    relational_expression      go to state 81
    shift_expression           go to state 82
    additive_expression        go to state 83
    multiplicative_expression  go to state 84
    tilda_expression           go to state 85
    cast_expression            go to state 86
    unary_expression           go to state 87
    unary_operator             go to state 88
    dur_expression             go to state 89
    postfix_expression         go to state 90
    primary_expression         go to state 91


state 9

   84 code_segment: LBRACE . RBRACE
   85             | LBRACE . statement_list RBRACE

    ID            shift, and go to state 1
    STRING_LIT    shift, and go to state 2
    CHAR_LIT      shift, and go to state 3
    INT_VAL       shift, and go to state 4
    FLOAT_VAL     shift, and go to state 5
    SEMICOLON     shift, and go to state 6
    LPAREN        shift, and go to state 7
    LBRACK        shift, and go to state 8
    LBRACE        shift, and go to state 9
    RBRACE        shift, and go to state 96
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    TIMES         shift, and go to state 12
    LT            shift, and go to state 13
    IF            shift, and go to state 14
    WHILE         shift, and go to state 15
    FOR           shift, and go to state 16
    DO            shift, and go to state 17
    LOOP          shift, and go to state 18
    BREAK         shift, and go to state 19
    CONTINUE      shift, and go to state 20
    RETURN        shift, and go to state 22
    EXCLAMATION   shift, and go to state 23
    PLUSPLUS      shift, and go to state 24
    MINUSMINUS    shift, and go to state 25
    POUNDPAREN    shift, and go to state 26
    PERCENTPAREN  shift, and go to state 27
    ATPAREN       shift, and go to state 28
    UNTIL         shift, and go to state 29
    EXTERNAL      shift, and go to state 30
    GLOBAL        shift, and go to state 31
    NEW           shift, and go to state 32
    SIZEOF        shift, and go to state 33
    TYPEOF        shift, and go to state 34
    SAME          shift, and go to state 35
    TILDA         shift, and go to state 36
    DOWNCHUCK     shift, and go to state 37
    STATIC        shift, and go to state 41
    SPORK         shift, and go to state 42
    L_HACK        shift, and go to state 43
    AT_IMPORT     shift, and go to state 44
    AT_DOC        shift, and go to state 45
    AT_EXAMPLE    shift, and go to state 46

    type_decl_a                go to state 53
    type_decl_b                go to state 54
    type_decl                  go to state 55
    statement_list             go to state 97
    statement                  go to state 57
    jump_statement             go to state 58
    selection_statement        go to state 59
    loop_statement             go to state 60
    code_segment               go to state 61
    import_statement           go to state 62
    doc_statement              go to state 63
    example_statement          go to state 64
    expression_statement       go to state 65
    expression                 go to state 66
    chuck_expression           go to state 67
    arrow_expression           go to state 68
    array_exp                  go to state 69
    decl_expression            go to state 70
    complex_exp                go to state 71
    polar_exp                  go to state 72
    vec_exp                    go to state 73
    conditional_expression     go to state 74
    logical_or_expression      go to state 75
    logical_and_expression     go to state 76
    inclusive_or_expression    go to state 77
    exclusive_or_expression    go to state 78
    and_expression             go to state 79
    equality_expression        go to state 80
    relational_expression      go to state 81
    shift_expression           go to state 82
    additive_expression        go to state 83
    multiplicative_expression  go to state 84
    tilda_expression           go to state 85
    cast_expression            go to state 86
    unary_expression           go to state 87
    unary_operator             go to state 88
    dur_expression             go to state 89
    postfix_expression         go to state 90
    primary_expression         go to state 91


state 10

  206 unary_operator: PLUS .

    $default  reduce using rule 206 (unary_operator)


state 11

  207 unary_operator: MINUS .

    $default  reduce using rule 207 (unary_operator)


state 12

  210 unary_operator: TIMES .

    $default  reduce using rule 210 (unary_operator)


state 13

   52 type_decl_b: LT . id_dot GT
   53            | LT . id_dot GT AT_SYM

    ID  shift, and go to state 98

    id_dot  go to state 99


state 14

   74 selection_statement: IF . LPAREN expression RPAREN statement
   75                    | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 100


state 15
